--- a/pollinations_search_app.html
+++ b/pollinations_search_app.html
@@ -1,46 +1,45 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pollinations Search</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <title>Pollinations AI Demo</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🎨 Pollinations AI Generator</h1>
+  <h1>Pollinations.AI Generator (Dark Theme)</h1>
+  <form id="genForm">
+    <label>API Key: <input type="text" id="apiKey" placeholder="Bearer token (optional)"></label><br>
+    <label>Prompt: <input type="text" id="prompt" required></label><br>
+    <label>Model: 
+      <select id="modelSelect">
+        <!-- Options will be populated by script -->
+      </select>
+    </label><br>
+    <label>Width: <input type="number" id="width" value="1024" min="64"></label>
+    <label>Height: <input type="number" id="height" value="1024" min="64"></label><br>
+    <label>Count: <input type="number" id="count" value="1" min="1"></label><br>
+    <label><input type="checkbox" id="nologo"> Disable Logo</label>
+    <label><input type="checkbox" id="enhance"> Enhance Prompt</label>
+    <label><input type="checkbox" id="safe"> Strict Filter</label>
+    <label><input type="checkbox" id="private"> Private (no feed)</label>
+    <label><input type="checkbox" id="infinite"> Infinite Mode</label><br>
+    <button type="submit">Generate Image(s)</button>
+  </form>
 
-    <form id="promptForm">
-      <label>Prompt
-        <input type="text" id="prompt" placeholder="A cat surfing on Saturn..." required />
-      </label>
+  <div id="results"></div>
 
-      <label>Model
-        <select id="model">
-          <option value="flux">Flux</option>
-          <option value="realisticVision">Realistic Vision</option>
-          <option value="gptimage">GPT Image</option>
-        </select>
-      </label>
-
-      <label>Image Size
-        <input type="number" id="width" placeholder="Width (e.g., 512)" />
-        <input type="number" id="height" placeholder="Height (e.g., 512)" />
-      </label>
-
-      <label>Generate Count
-        <input type="number" id="count" min="1" max="50" value="10" />
-      </label>
-
-      <label><input type="checkbox" id="infiniteMode" /> Enable Infinite Mode</label>
-      <label><input type="checkbox" id="nologo" /> Remove Pollinations Logo</label>
-      <label><input type="checkbox" id="privateMode" /> Hide from Public Feed</label>
-
-      <button type="submit">Generate</button>
-    </form>
+  <h2>Live Feeds</h2>
+  <div class="feed-container">
+    <div>
+      <h3>Image Feed</h3>
+      <div id="imageFeed" class="feed"></div>
+    </div>
+    <div>
+      <h3>Text Feed</h3>
+      <div id="textFeed" class="feed"></div>
+    </div>
   </div>
 
-  <script src="js/generate.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
